--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         padding:40px;
         font-size: 16px;">
        <p>我的网站</p>
-       <a href="https://yufanzg.github.io/ZYF-01/zhuye.html">友情链接</a>
+       <a href="https://yufanzg.github.io/ZYF-01/zhuye.html">个人网站链接</a>
     </div>
 </body>
 </html>
