--- a/zhuye.html
+++ b/zhuye.html
@@ -36,7 +36,7 @@
     <h2 style="margin: 0">视频</h2>
     <div>
       <video class="vi0" controls>
-        <source src="./videos/刀剑神域48.mp4" />
+        <source src="./videos/48.mp4" />
       </video>
     </div>
 
